# technical-document-ml-service

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: .env  .env.example  Dockerfile  alembic.ini  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 0001_initial_schema.py  0002_add_outbox_events.py
app/src/technical_document_ml_service/: main.py
app/src/technical_document_ml_service/api/: __init__.py  deps.py  errors.py  upload.py
app/tests/: conftest.py  helpers.py  test_api_auth.py  test_api_balance.py  test_api_history.py  test_api_predict.py  test_api_tasks.py  test_billing_service.py  test_docling_backend.py  test_history_service.py  test_inference_registry.py  test_init_db.py  test_prediction_processing_service.py  test_system_flows.py  test_user_service.py  test_web_auth.py  test_web_pages.py  test_web_predict.py  test_webhook_feature.py  test_webhook_service.py
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  jest.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/__tests__/: TaskStatusBadge.test.tsx  errors.test.ts  format.test.ts  utils.test.ts
frontend/src/app/: layout.tsx  not-found.tsx
frontend/src/hooks/: useTaskSSE.ts
frontend/src/lib/: auth.ts  constants.ts  format.ts  utils.ts
src/technical_document_ml_service/: __init__.py
src/technical_document_ml_service/domain/: entities.py
web-proxy/: Dockerfile  docker-entrypoint.sh  nginx.conf
worker/: Dockerfile  requirements.txt
(+112 files in other folders)
