[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-document-ml-service"
version = "0.1.0"
description = "Объектная модель ML-сервиса для извлечения данных из технической документации"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name" }
]

[tool.setuptools.packages.find]
where = ["src"]