[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-document-ml-service"
version = "0.1.0"
description = "ML-сервис для извлечения и проверки данных из технической документации"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "photonchikk" }
]

[tool.setuptools]
package-dir = {"" = "app/src"}

[tool.setuptools.packages.find]
where = ["app/src"]